attempt to fix overflow-x by adding to css

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -4,7 +4,10 @@
     box-sizing: border-box;
     margin: 0;
 }
-
+html, body {
+width: 100%;
+overflow-x: hidden;
+}
 #banner {
     position: relative;
 }
